// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptListItem rendering tests PromptListItem - isSelected false - rendered test 1`] = `
<div>
   
  <a
    data-testid="mock-link"
    href="/prompt/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="p-4 cursor-pointer transition-colors hover:bg-slate-50 "
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="font-medium mb-1 text-slate-900"
          >
            title 1
          </h3>
          <div
            class="flex flex-wrap gap-1 mb-2"
          >
            <span
              class="text-xs px-2 py-1 bg-slate-100 text-slate-700 rounded border border-slate-200"
            />
          </div>
          <div
            class="text-xs text-slate-500 flex items-center gap-3"
          >
            <span
              class="font-medium"
            >
              v
              1
            </span>
            <span
              class="flex items-center gap-1 text-blue-600 font-medium"
            >
              🤖 
              model 1
            </span>
            <span
              class="flex items-center gap-1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3 h-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              27. Sept. 2025, 02:00 AM
            </span>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 ml-2 p-1 bg-background hover:bg-slate-100 rounded transition-colors z-20"
          data-slot="button"
          data-testid="toggle-favorite-btn"
          title="Remove from favorites"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star w-5 h-5 fill-yellow-400 text-yellow-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </button>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected true - rendered test 1`] = `
<div>
   
  <a
    data-testid="mock-link"
    href="/prompt/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="p-4 cursor-pointer transition-colors hover:bg-slate-50 bg-blue-50 border-l-4 border-l-blue-600"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="font-medium mb-1 text-slate-900"
          >
            title 1
          </h3>
          <div
            class="flex flex-wrap gap-1 mb-2"
          >
            <span
              class="text-xs px-2 py-1 bg-slate-100 text-slate-700 rounded border border-slate-200"
            />
          </div>
          <div
            class="text-xs text-slate-500 flex items-center gap-3"
          >
            <span
              class="font-medium"
            >
              v
              1
            </span>
            <span
              class="flex items-center gap-1 text-blue-600 font-medium"
            >
              🤖 
              model 1
            </span>
            <span
              class="flex items-center gap-1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3 h-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              27. Sept. 2025, 02:00 AM
            </span>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 ml-2 p-1 bg-background hover:bg-slate-100 rounded transition-colors z-20"
          data-slot="button"
          data-testid="toggle-favorite-btn"
          title="Add to favorites"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star w-5 h-5 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </button>
      </div>
    </div>
  </a>
</div>
`;
